--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -58,28 +58,20 @@ jobs:
         run: |
           Write-Host "Preparing FFmpeg binaries..."
           
-          # 确保 src-tauri/binaries 目录存在
-          $binDir = Join-Path (Get-Location) "src-tauri\binaries"
-          if (-not (Test-Path $binDir)) {
-            New-Item -ItemType Directory -Force -Path $binDir | Out-Null
-          }
+          # 直接复制到 src-tauri 根目录
+          $tauriDir = Join-Path (Get-Location) "src-tauri"
           
-          # 复制文件
-          Copy-Item -Path "ffmpeg-7.1-essentials_build\bin\ffmpeg.exe" -Destination "$binDir\ffmpeg.exe" -Force
-          Copy-Item -Path "ffmpeg-7.1-essentials_build\bin\ffprobe.exe" -Destination "$binDir\ffprobe.exe" -Force
+          Copy-Item -Path "ffmpeg-7.1-essentials_build\bin\ffmpeg.exe" -Destination "$tauriDir\ffmpeg.exe" -Force
+          Copy-Item -Path "ffmpeg-7.1-essentials_build\bin\ffprobe.exe" -Destination "$tauriDir\ffprobe.exe" -Force
           
-          Write-Host "Verifying file existence:"
-          Get-ChildItem $binDir
-          
-          # 同时复制一份到 src-tauri 根目录，以防万一
-          Copy-Item -Path "ffmpeg-7.1-essentials_build\bin\ffmpeg.exe" -Destination "src-tauri\ffmpeg.exe" -Force
-          Copy-Item -Path "ffmpeg-7.1-essentials_build\bin\ffprobe.exe" -Destination "src-tauri\ffprobe.exe" -Force
+          Write-Host "Verifying files in src-tauri:"
+          Get-ChildItem $tauriDir
 
       - name: Build Tauri app
         run: |
           echo "Starting Tauri build..."
-          # 列出 src-tauri 目录内容以供调试
-          ls -R src-tauri/binaries
+          # 再次确认文件存在
+          ls -l src-tauri/ffmpeg.exe
           npm run tauri build -- --verbose
         env:
           RUST_BACKTRACE: 1
@@ -128,11 +120,11 @@ jobs:
           mkdir -p src-tauri/binaries
           
           echo "Copying FFmpeg binaries..."
-          cp $(which ffmpeg) src-tauri/binaries/ffmpeg
-          cp $(which ffprobe) src-tauri/binaries/ffprobe
+          cp $(which ffmpeg) src-tauri/ffmpeg
+          cp $(which ffprobe) src-tauri/ffprobe
           
           echo "Verifying files..."
-          ls -lh src-tauri/binaries/
+          ls -lh src-tauri/
 
       - name: Install frontend dependencies
         run: npm install
