--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,6 +22,7 @@ chrono = "0.4.42"
 rfd = "0.14.1"
 reqwest = { version = "0.11", features = ["json", "blocking"] }
 tokio = { version = "1", features = ["full"] }
+rayon = "1.11.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
